--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- link fontawsome -->
-    <link rel="stylesheet" href="assets/styles/fontawesome.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- link normalise -->
     <link rel="stylesheet" href="assets/styles/normalise.css" />
     <link rel="stylesheet" href="assets/styles/style.css" />
@@ -87,165 +93,166 @@
       </section>
       <!-- end section about  1 -->
       <!-- star section about 2 -->
-      
+
       <section class="section-about">
-      <div class="section-container">
-        <div class="section-title">
-          <span></span>
-          <div class="desc-sec">Explore My</div>
-          <div class="title-sec">Experience</div>
-        </div>
-      </div>
-      <div class="about-container">
-        <div class="jobs">
-          <div class="job" data-job="Designer">
-            <h5>UI/UX Designer</h5>
-            <div class="content-job hide" data-job="Designer">
-              <strong>Designer</strong>
-              <p class="">
-                "UI/UX design" se traduit par "conception d'interface
-                utilisateur et d'expérience utilisateur". UI (User Interface) se
-                réfère à l'apparence visuelle et à l'interaction directe avec un
-                produit (boutons, menus, etc.), tandis que UX (User Experience)
-                englobe l'expérience globale de l'utilisateur avec ce produit, y
-                compris son ressenti et sa satisfaction. En d'autres termes,
-                l'UI concerne l'aspect, et l'UX concerne le ressenti.
-              </p>
-              <div class="skills">
-                <div class="skill">
-                  <span>figma</span>
-                  <div class="progress-bar" data-complite="20">
-                    <div class="progress">20%</div>
-                  </div>
-                </div>
-                <div class="skill">
-                  <span>photo shop</span>
-                  <div class="progress-bar" data-complite="46">
-                    <div class="progress">46%</div>
-                  </div>
-                </div>
-                <div class="skill">
-                  <span>material</span>
-                  <div class="progress-bar" data-complite="6">
-                    <div class="progress">6%</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="job" data-job="Frontend">
-            <h5>Frontend</h5>
-            <div class="content-job hide" data-job="Frontend">
-              <strong>Frontend</strong>
-              <p class="">
-                A front-end developer is a software developer who focuses on the
-                user-facing side of websites and web applications. They use
-                languages like HTML, CSS, and JavaScript to create the
-                interactive and visually appealing elements that users directly
-                interact with.
-              </p>
-              <div class="skills">
-                <div class="skill">
-                  <span>html</span>
-                  <div class="progress-bar" data-complite="80">
-                    <div class="progress">80%</div>
-                  </div>
-                </div>
-                <div class="skill">
-                  <span>css</span>
-                  <div class="progress-bar" data-complite="60">
-                    <div class="progress">60%</div>
-                  </div>
-                </div>
-                <div class="skill">
-                  <span>bootstrap</span>
-                  <div class="progress-bar" data-complite="53">
-                    <div class="progress">53%</div>
-                  </div>
-                </div>
-                <div class="skill">
-                  <span>js</span>
-                  <div class="progress-bar" data-complite="46">
-                    <div class="progress">46%</div>
-                  </div>
-                </div>
-
-                <div class="skill">
-                  <span>git</span>
-                  <div class="progress-bar" data-complite="60">
-                    <div class="progress">60%</div>
-                  </div>
-                </div>
-                <div class="skill">
-                  <span>SEO</span>
-                  <div class="progress-bar" data-complite="10">
-                    <div class="progress">10%</div>
-                  </div>
-                </div>
-                <div class="skill">
-                  <span>react js</span>
-                  <div class="progress-bar" data-complite="0">
-                    <div class="progress">0%</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="job" data-job="Backend">
-            <h5>Backend</h5>
-            <div class="content-job hide" data-job="Backend">
-              <strong>Backend</strong>
-              <p class="">
-                Un développeur back-end est un professionnel de l'informatique
-                spécialisé dans la création et la maintenance de la partie
-                serveur, ou "back-end", d'un site web ou d'une application. Son
-                travail n'est pas visible par l'utilisateur, mais il est
-                essentiel au bon fonctionnement de l'ensemble. Il s'occupe de la
-                logique du site, de la gestion des bases de données et de la
-                communication entre le serveur et le front-end (partie visible
-                par l'utilisateur).
-              </p>
-              <div class="skills">
-                <div class="skill">
-                  <span>node js</span>
-                  <div class="progress-bar" data-complite="100">
-                    <div class="progress">100%</div>
-                  </div>
-                </div>
-
-                <div class="skill">
-                  <span>type script js</span>
-                  <div class="progress-bar" data-complite="0">
-                    <div class="progress">0%</div>
-                  </div>
-                </div>
-
-                <div class="skill">
-                  <span>asp.net</span>
-                  <div class="progress-bar" data-complite="0">
-                    <div class="progress">0%</div>
-                  </div>
-                </div>
-
-                <div class="skill">
-                  <span>servers</span>
-                  <div class="progress-bar" data-complite="0">
-                    <div class="progress">0%</div>
-                  </div>
-                </div>
-                <div class="skill">
-                  <span>SQL Server</span>
-                  <div class="progress-bar" data-complite="0">
-                    <div class="progress">0%</div>
-                  </div>
-                </div>
-              </div>
-            </div>
+        <div class="section-container">
+          <div class="section-title">
+            <span></span>
+            <div class="desc-sec">Explore My</div>
+            <div class="title-sec">Experience</div>
           </div>
         </div>
-      </div>
-    </section>
-      
+        <div class="about-container">
+          <div class="jobs">
+            <div class="job" data-job="Designer">
+              <h5>UI/UX Designer</h5>
+              <div class="content-job hide" data-job="Designer">
+                <strong>Designer</strong>
+                <p class="">
+                  "UI/UX design" se traduit par "conception d'interface
+                  utilisateur et d'expérience utilisateur". UI (User Interface)
+                  se réfère à l'apparence visuelle et à l'interaction directe
+                  avec un produit (boutons, menus, etc.), tandis que UX (User
+                  Experience) englobe l'expérience globale de l'utilisateur avec
+                  ce produit, y compris son ressenti et sa satisfaction. En
+                  d'autres termes, l'UI concerne l'aspect, et l'UX concerne le
+                  ressenti.
+                </p>
+                <div class="skills">
+                  <div class="skill">
+                    <span>figma</span>
+                    <div class="progress-bar" data-complite="20">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <span>photo shop</span>
+                    <div class="progress-bar" data-complite="46">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <span>material</span>
+                    <div class="progress-bar" data-complite="6">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="job" data-job="Frontend">
+              <h5>Frontend</h5>
+              <div class="content-job hide" data-job="Frontend">
+                <strong>Frontend</strong>
+                <p class="">
+                  A front-end developer is a software developer who focuses on
+                  the user-facing side of websites and web applications. They
+                  use languages like HTML, CSS, and JavaScript to create the
+                  interactive and visually appealing elements that users
+                  directly interact with.
+                </p>
+                <div class="skills">
+                  <div class="skill">
+                    <span>html</span>
+                    <div class="progress-bar" data-complite="80">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <span>css</span>
+                    <div class="progress-bar" data-complite="60">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <span>bootstrap</span>
+                    <div class="progress-bar" data-complite="53">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <span>js</span>
+                    <div class="progress-bar" data-complite="46">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+
+                  <div class="skill">
+                    <span>git</span>
+                    <div class="progress-bar" data-complite="60">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <span>SEO</span>
+                    <div class="progress-bar" data-complite="10">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <span>react js</span>
+                    <div class="progress-bar" data-complite="0">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="job" data-job="Backend">
+              <h5>Backend</h5>
+              <div class="content-job hide" data-job="Backend">
+                <strong>Backend</strong>
+                <p class="">
+                  Un développeur back-end est un professionnel de l'informatique
+                  spécialisé dans la création et la maintenance de la partie
+                  serveur, ou "back-end", d'un site web ou d'une application.
+                  Son travail n'est pas visible par l'utilisateur, mais il est
+                  essentiel au bon fonctionnement de l'ensemble. Il s'occupe de
+                  la logique du site, de la gestion des bases de données et de
+                  la communication entre le serveur et le front-end (partie
+                  visible par l'utilisateur).
+                </p>
+                <div class="skills">
+                  <div class="skill">
+                    <span>node js</span>
+                    <div class="progress-bar" data-complite="100">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+
+                  <div class="skill">
+                    <span>type script js</span>
+                    <div class="progress-bar" data-complite="0">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+
+                  <div class="skill">
+                    <span>asp.net</span>
+                    <div class="progress-bar" data-complite="0">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+
+                  <div class="skill">
+                    <span>servers</span>
+                    <div class="progress-bar" data-complite="0">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <span>SQL Server</span>
+                    <div class="progress-bar" data-complite="0">
+                      <div class="progress"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- end section about  2 -->
       <!-- star section portfolio -->
       <section class="section-portfolio">
@@ -274,10 +281,9 @@
               <div class="modal-content">
                 <button class="btn close-modal">&times;</button>
                 <h2>Modal Title</h2>
-                <p>
-                  This is the modal content. You can put text, images, or
-                  anything you like here.
-                </p>
+                <p>@ This is the modal content.@</p>
+                <p>@ about this project@</p>
+                <p>@ skills@</p>
               </div>
             </div>
             <div class="box-project" data-cat="web">
@@ -430,6 +436,15 @@
                 <input class="btn" type="button" value="Sign In" />
               </form>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="drop-line">
+        <div class="container-drop">
+          <p class="drop-title">Drop Me Line</p>
+          <div class="controll-drop">
+            <input type="text" name="input-drop-line" id="input-drop" placeholder="Send Me Same Text " />
+            <button class="btn btn-drop" type="submit">send</button>
           </div>
         </div>
       </section>
