--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       referrerpolicy="no-referrer"
     />
     <!-- link normalise -->
-    <link rel="stylesheet" href="assets/styles/normalise.css" />
-    <link rel="stylesheet" href="assets/styles/style.css" />
+    <link rel="stylesheet" href="./assets/styles/normalise.css" />
+    <link rel="stylesheet" href="./assets/styles/style.css" />
     <!-- media -->
-    <link rel="stylesheet" href="assets/styles/mediaAll.css" />
+    <link rel="stylesheet" href="./assets/styles/mediaAll.css" />
     <title>project name</title>
   </head>
   <body>
@@ -74,7 +74,7 @@
           </div>
           <div class="photo-home">
             <div class="container-photo">
-              <img src="/assets/imgs/tof about.png" width="300" />
+              <img src="./assets/imgs/tof about.png" width="300" />
             </div>
           </div>
         </div>
@@ -287,70 +287,70 @@
               </div>
             </div>
             <div class="box-project" data-cat="web">
-              <img src="/assets/imgs/3.jpg" alt="" />
+              <img src="./assets/imgs/3.jpg" alt="" />
               <h4>1</h4>
               <div class="read">
                 <span class="more">more..</span>
               </div>
             </div>
             <div class="box-project" data-cat="mobile">
-              <img src="/assets/imgs/4.jpg" alt="" />
+              <img src="./assets/imgs/4.jpg" alt="" />
               <h4>2</h4>
               <div class="read">
                 <span class="more">more..</span>
               </div>
             </div>
             <div class="box-project" data-cat="desktop">
-              <img src="/assets/imgs/5.jpg" alt="" />
+              <img src="./assets/imgs/5.jpg" alt="" />
               <h4>3</h4>
               <div class="read">
                 <span class="more">more..</span>
               </div>
             </div>
             <div class="box-project" data-cat="web">
-              <img src="/assets/imgs/3.jpg" alt="" />
+              <img src="./assets/imgs/3.jpg" alt="" />
               <h4>4</h4>
               <div class="read">
                 <span class="more">more..</span>
               </div>
             </div>
             <div class="box-project" data-cat="game">
-              <img src="/assets/imgs/4.jpg" alt="" />
+              <img src="./assets/imgs/4.jpg" alt="" />
               <h4>5</h4>
               <div class="read">
                 <span class="more">more..</span>
               </div>
             </div>
             <div class="box-project" data-cat="desktop">
-              <img src="/assets/imgs/5.jpg" alt="" />
+              <img src="./assets/imgs/5.jpg" alt="" />
               <h4>6</h4>
               <div class="read">
                 <span class="more">more..</span>
               </div>
             </div>
             <div class="box-project" data-cat="mobile">
-              <img src="/assets/imgs/4.jpg" alt="" />
+              <img src="./assets/imgs/4.jpg" alt="" />
               <h4>7</h4>
               <div class="read">
                 <span class="more">more..</span>
               </div>
             </div>
             <div class="box-project" data-cat="web">
-              <img src="/assets/imgs/3.jpg" alt="" />
+              <img src="./assets/imgs/3.jpg" alt="" />
               <h4>8</h4>
               <div class="read">
                 <span class="more">more..</span>
               </div>
             </div>
             <div class="box-project" data-cat="desktop">
-              <img src="/assets/imgs/5.jpg" alt="" />
+              <img src="./assets/imgs/5.jpg" alt="" />
               <h4>9</h4>
               <div class="read">
                 <span class="more">more..</span>
               </div>
             </div>
             <div class="box-project" data-cat="game">
-              <img src="/assets/imgs/9.jpg" alt="" />
+              <img src="./assets/imgs/9.jpg" alt="" />
               <h4>10</h4>
               <div class="read">
                 <span class="more">more..</span>
@@ -371,7 +371,7 @@
         <div class="section-form">
           <div class="container-form">
             <div class="photo-cover">
-              <img src="/assets/imgs/10.jpg" alt="" />
+              <img src="./assets/imgs/10.jpg" alt="" />
               <!-- <video
                 src="/assets/imgs/dance (free Palestine)💥 copy.mp4"
                 autoplay  
