--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
     </footer>
     <!-- end footer -->
 
-    <script src="assets/scripts/all.min.js"></script>
-    <script src="assets/scripts/projectName.js"></script>
+    <script src="./assets/scripts/all.min.js"></script>
+    <script src="./assets/scripts/projectName.js"></script>
   </body>
 </html>
