handle section about-me

--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@
         <div class="logo">logo</div>
         <nav class="nav white">
           <ul class="list-items">
-            <li class="item itemNav"><a href="#home" class="link active">home</a></li>
-            <li class="item itemNav"><a href="#about" class="link">about</a></li>
-            <li class="item itemNav"><a href="#portfolio" class="link">portfolio</a></li>
-            <li class="item itemNav"><a href="#contact" class="link">contact</a></li>
-            <li class="item itemNav"><a href="" class="link">more</a></li>
+            <li class="itemNav item">
+              <a href="#home" class="link active">home</a>
+            </li>
+            <li class="itemNav item">
+              <a href="#about" class="link">about</a>
+            </li>
+            <li class="itemNav item">
+              <a href="#portfolio" class="link">portfolio</a>
+            </li>
+            <li class="itemNav item">
+              <a href="#contact" class="link">contact</a>
+            </li>
+            <li class="itemNav item"><a href="" class="link">more</a></li>
           </ul>
           <div class="container-mode white">
             <div class="toggle-nav">
@@ -81,13 +89,31 @@
       </section>
       <!-- end section home -->
       <!-- star section about  1 -->
-      <section id="about" class="section-about1">
+      <section id="about" class="section-about-me">
         <div class="section-container">
           <div class="section-title">
             <span></span>
             <div class="desc-sec">Get To Know More</div>
             <div class="title-sec">About Me</div>
           </div>
+        </div>
+        <div class="about-me-container">
+          <h2 class="title-about-me">
+            I’m zed .D <br> a Frontend Developper based in <br> <i class="fa-solid fa-location-dot"></i>
+            Tunisie
+          </h2>
+          <p>
+            I was lucky to start my career As Frontend Developper, where I got passionate
+            about designing digital products. After 1 years I moved to 
+            Frontend. I’ve also been developing new skills and challenging myself
+            to come up with a new idea every day that combines design and code.
+          </p>
+          <p>
+            As a designer, I’ve needed to overcome some barriers in my
+            career. It’s taught me to push through and stand up for myself. I
+            want to inspire other designers to do the same, so don’t hesitate to
+            reach out. I’m always online.
+          </p>
         </div>
         <div class="to-top">top</div>
       </section>
@@ -265,7 +291,9 @@
         <div class="container-portfolio">
           <nav class="nav">
             <ul class="list-items">
-              <li class="item"><a class="link active" data-name="all">all</a></li>
+              <li class="item">
+                <a class="link active" data-name="all">all</a>
+              </li>
               <li class="item">
                 <a class="link" data-name="mobile">mobile</a>
               </li>
